# tools

./: .gitignore  Graph.pm  Node.pm  README.md  README.txt  add_parallel_to_all_treebanks.pl  check-space-after-paragraph.pl  check_files.pl  check_overlaps.pl  check_release.pl  check_sentence_ids.pl  check_text_wosp_match.sh  collapse_debug.pl  collect_features_from_conll.pl  collect_propn_sequences.pl  conll-u.py  conll_convert_tags_to_uposf.pl  conll_deprel_statistics.pl  conll_tag_statistics.pl  conllu-align-tokens.pl  conllu-break-cycles.pl  conllu-copy-basic-to-enhanced.pl  conllu-dependency-stats.pl  conllu-formconvert.py  conllu-quick-fix.pl  conllu-remove-enhanced-deps.pl  conllu-stats.pl  conllu-stats.py  conllu-tenfold.pl  conllu-w2t.py  conllu_align_tokens.pl  conllu_convert_uposf_to_xpos.pl  conllu_copy_annotation.pl  conllu_copy_sentence_segmentation.pl  conllu_copy_tokenization.pl  conllu_cut.pl  conllu_quick_fix_id_sequence.pl  conllu_sort_sentences_by_ids.pl  conllu_to_conllx.pl  conllu_to_text.pl  (+52 more)
udtools/: MANIFEST.in  README.md  pyproject.toml
udtools/docs/: checks_table.md  example_config.yaml  example_working.yaml  explanations.txt  invalid-line.yaml  notes.txt
udtools/src/udtools/: __init__.py  argparser.py  cli-remake.py  cli.py  compiled_regex.py  conllu_spec.yaml  data.py  eval.py  incident.py  level1.py  level2.py  level3.py  level4.py  level5.py  level6.py  loaders.py  logging_utils.py  output_utils.py  specifications.py  state.py  udeval.py  utils-master.py  utils.py  validate.py  validate_lib.py  validator.py
udtools/tests/: test_regex.py  test_utils.py  test_validate.py
udtools/tests/test-cases/: test.bat
validator/: README.md  pyproject.toml
validator/docs/: checks_table.md  example_config.yaml  example_output.json  extra.py  full-validation.yaml  long_term_todo.md  notes.md  notes.txt
validator/src/validator/: argparser.py  cli.py  compiled_regex.py  data.py  globals.py  incident.py  level1.py  level2.py  level3.py  level4.py  level5.py  level6.py  loaders.py  logging_utils.py  messages.py  output_utils.py  pr.md  specifications.py  state.py  test.py  tests.py  (+5 more)
validator/tests/: futils.py  test_cases.py  test_regex.py  test_utils.py  test_validate.py
(+524 files in other folders)
